# long-duration-mdk

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
src/long_duration_mdk/: calculations.py  frames.py
tests/: test_age.py  test_calculations.py  test_frames.py  test_records.py
